--- a/Assignment1.tex
+++ b/Assignment1.tex
@@ -13,7 +13,11 @@
 \usepackage{algpseudocode}
 \usepackage{graphics}
 \usepackage{epsfig}
+\usepackage{graphicx}
+\usepackage{subfigure}
+% \usepackage[UTF8]{ctex}
 %\usepackage{ramacros}
+\newtheorem{lemma}{Lemma}[section]
 
 \addtolength{\textwidth}{20mm}
 \addtolength{\oddsidemargin}{-10mm}
@@ -45,7 +49,7 @@
 
 \pagestyle{plain} \pagenumbering{arabic}
 
-\title{{\bf Assignment 1} \\ {\large Deadline: }}
+\title{{\bf Assignment 1} \\ {\large ID: 120037910002 } {\large Name: Xingguo Jia } {\large Email: jiaxg1998@sjtu.edu.cn}}
 
 \author{}
 \date{}
@@ -67,7 +71,23 @@
 
 \begin{exercise}
 Prove the K\"onig theorem: Let $G$ be bipartite, then cardinality of maximum matching = cardinality of minimum vertex cover.
+
 \end{exercise}
+\begin{proof} 
+    \leavevmode\newline
+\begin{itemize}
+
+\item We define $L$ to be the left part of $G=(V,E)$ and $R$ to be the right part, and suppose we have $M$ to be the maximum matching. Start from a vertex in $R$ that is not a vertex of any edge in $M$, we go through a path (not in $M$) $\rightarrow$ (in $M$) $\rightarrow$  (not in $M$) $\rightarrow$ (in $M$) ... until the path cannot continue(alternating path). 
+
+\item \textbf{All vertexes in this path } form a vertex set $U$. \textbf{All edges in this path} form a edge set $P$. This path starts at a vertex in $R$ and ends at a vertex in $R$. Firstly we prove that $m=(L \cap U) \cup (R \setminus U)$ is a \textbf{vertex cover}.
+
+\item We prove by contradiction. Suppose $e \in E$'s right vertex $r$ is in $R\cap U$ and left vertex $l$ is in $L\setminus U$. $e\notin M$ because it shares a vertex $r\in R\cap U$ with an edge $f\in M \cap P$. Then, since $e \notin M$, we have a path from $f$ to $e$ that becomes a part of an alternating path, which is a contradiction.
+
+\item Next we prove that $|m| = |M|$. For each $k \in M \cap P$, it has a vertex in $L\cap U$ corresponding to it. For each $k \in M \setminus P$, its right vertex must $\in R \setminus U$, or it would become part of the path.
+
+\item Finally, $m$ must be the minimum cover. If we remove a vertex $v$ from $m$, then $e \in M$ corresponding to $v$ cannot be covered. 
+\end{itemize}
+\end{proof}
 
 
 \begin{exercise}
@@ -83,9 +103,25 @@ Consider the algorithm \textbf{Negative-Dijkstra} for computing shortest paths t
 \Return weights of $T$ in the original $G$;
 \end{algorithmic}
 \end{algorithm}
+\newpage
 Note that \textbf{Negative-Dijkstra} shifts all edge weights to be non-negative(by shifting all edge weights by the smallest original value) and runs in $O(m+\log n)$ time.\\
 Prove or Disprove: \textbf{Negative-Dijkstra} computes single-source shortest paths correctly in graphs with negative edge weights. To prove the algorithm correct, show that for all $u\in V$ the shortest $s-u$ path in the original graph is in $T$. To disprove, exhibit a graph with negative edges, with no negative cycles where \textbf{Negative-Dijkstra} outputs the wrong "shortest" paths, and explain why the algorithm fails.
 \end{exercise}
+
+\textbf{Disprove:}
+
+\begin{figure}[!htp]
+    \centering
+    \includegraphics[width=0.5\textwidth]{img/2.pdf}
+    \caption{Negative to Non-negative Edges}
+    \label{fig:2}
+  \end{figure}
+See Figure \ref{fig:2}, we shift the graph $G=$ \{$w_{AB}=5,w_{BC}=-10,w_{AC}=2$ \} to $G'=$\{$w_{AB}=15,w_{BC}=0,w_{AC}=12$ \}.
+    \begin{itemize}
+        \item Use Dijkstra's Algorithm on $G'$, $A$ is the source vertex. Then the shortest path from $A$ to $C$ is 12, after shifting back, it is -2 ($A\rightarrow C$).
+        \item Use Dijkstra's Algorithm on $G$, then the shortest path from $A$ to $C$ is -5 ($A\rightarrow B \rightarrow C$), not -2.
+        \item Negative-Dijkstra fails because the \textbf{shifting} operation can shift different \textbf{weight} even for the two paths with the same length. The \textbf{more edges} a path has, the more \textit{shift} it gets. It is unfair.
+    \end{itemize}
 
 
 \begin{exercise}
@@ -97,23 +133,97 @@ not-necessarily-distinct vertices $v_1,v_2,\ldots,v_k$ such that each pair of co
 Describe an algorithm that computes the number of graph walks from $s$ to $t$ of length exactly $L$ in $O((n+m)L)$ time. Prove correctness and analyze running time.
 \end{itemize}
 \end{exercise}
-\newpage
+\textbf{Solution:}
+    \leavevmode\newline
+    \begin{itemize}
+        \item
+        \item
+    \end{itemize}
+
+
+
 
 
 \begin{exercise}
 The diameter of a connected, undirected graph $G=(V,E)$ is the length (in number of edges) of the longest shortest path between two nodes. Show that is the diameter of a graph is $d$ then there is some set $S\subseteq V$ with $|S|\leq n/(d-1)$ such that removing the vertices in $S$ from the graph would break it into several disconnected pieces.
 
 \end{exercise}
+\begin{proof} 
+    \leavevmode\newline
+
+We use \textbf{Menger's theorem:} Let $G$ be a finite undirected graph and $x$ and $y$ two distinct vertices. Then the size of the minimum edge cut for $x$ and $y$ is equal to the maximum number of pairwise edge-independent paths from $x$ to $y$.
+\begin{itemize}
+    \item Suppose $x,y\in G$ is the two ends of the diameter of $G$. According to \textbf{Menger's theorem}, the size of the minimum edge cut $S$ for $x$ and $y$ is equal to the maximum number of pairwise edge-independent paths from $x$ to $y$.
+    \item The maximum number of pairwise edge-independent paths from $x$ to $y$ is $m$, then $m=|S|$, and $m*(d-1)+2\leq n\implies |S|\leq (n-2)/(d-1) \implies |S| < n/(d-1)$, where removing the vertices in $S\subseteq V$ from the graph would break it into \textbf{two} disconnected pieces.
+\end{itemize}
+
+\end{proof}
+
 
 
 
 \begin{exercise}
 Let $G$ be a $n$ vertices graph. Show that if every vertex in $G$ has degree at least $n/2$, then $G$ contains a Hamiltonian path.
 \end{exercise}
+\begin{proof} This is \textbf{Dirac's theorem}, which is weaker than Ore's theorem. Now we just need to prove \textbf{Ore's theorem}: Let $G$ be a (finite and simple) graph with $n \geq 3$ vertices. If $deg(u)+deg(v) \geq n$ for every pair of distinct non-adjacent vertices $u$ and $v$ of $G$, then $G$ is Hamiltonian.
+    \begin{figure}[!htp]
+        \centering
+        \includegraphics[width=0.6\textwidth]{img/3.pdf}
+        \caption{Ore's theorem}
+        \label{fig:3}
+      \end{figure}
+
+    \begin{itemize}
+        \item Firstly, we prove that $G=(V,E)$ must be \textbf{connected} by contradiction. Suppose $V_1$ and $V_2$ are the two sets of disconnected vertexes in $V$ and $|V_1|+|V_2|=|V|=n$. WLOG, $|V_1| \leq n/2 \leq |V_2|$. Then, for two vertexes $v_1,v_2 \in V_1$, we have $deg(v_1)+deg(v_2) \leq (n/2-1)*2 < n$, which is a contradiction.
+        
+        \item Suppose path $P=v_0 v_1 ... v_p(p\leq n-1)$ is the \textbf{longest} path that does not go through a same vertex more than once. Suppose $v_{i_0},v_{i_1},...,v_{i_k}$ are all vertexes adjacent to $v_0$, then they are all on path $P$ and $k\leq p$, \textbf{or} path $v_{i_x}v_0v_1...v_p(0\leq x\leq k)$ is longer than $P$, which is a contradiction. Thus, $deg(v_0)=k+1$.
+        
+        \item Also, at least one of $v_{i_0},v_{i_1},...,v_{i_k} (k\leq p)$ is adjacent to $v_p$. \textbf{Or}, $deg(v_p)\leq p-(k+1)\implies deg(v_0)+deg(v_p)\leq k+1+(p-(k+1))=p\leq n-1$, which contradicts with $deg(u)+deg(v) \geq n$. Thus, $\exists v_b$ on path $P$ that is both adjacent to $v_0$ and $v_p$. Since $v_b$ and $v_{b+1}$ are adjacent, so we have a Hamiltonian cycle $v_0 ... v_b v_p ... v_{b+1} v_0$ in Figure \ref{fig:3}, which has a length of $p+1$.
+        
+        \item Suppose $p+1 < n$, then $\exists v_m \in G$ is not in path $P$. Since $G$ is \textbf{connected}, $v_m$ can go to a vertex $v_n\in P$ through some path. If $0\leq n\leq b$, then path $v_m ... v_n v_{n-1} ... v_0 v_{b+1} ... v_{p} v_{p-1} ... v_{b} v_{b-1} ... v_{n+1}$ becomes a at least $(p+1)$-long path, which contradicts with the longest path $P$. For $b+1\leq n\leq p$ we have similar contradiction. 
+        \item Thus, we have $p+1 \geq n\implies p\geq n-1$, and $p \leq n-1$ since $P \subseteq V$, finally $p=n-1$, which means path $P$ is a Hamiltonian path.
+    \end{itemize}
+    
+\end{proof}
+
+
+
 
 \begin{exercise}
 Show how to find a minimal cut of a graph (not only the cost of minimum cut, but also the set of edges in the cut).
 \end{exercise}
+
+\textbf{Solution:}
+
+    \begin{itemize}
+        \item Let $G=(V,E)$ be a weighted undirected graph. For two vertexes $s,t\in V$, there are two possible situations: global minimum cut of $G$ is also $s-t$ min-cut, or $s$ and $t$ belong to the same side of the global min-cut.
+        \item In the latter situation, the global min-cut can be found by merging $s$ and $t$. $G$ becomes $G'=G\setminus \{s,t\}\cup \{st\}$, where $st$ is a vertex representing merged $s$ and $t$. If edge $s-t\in E$, then it disappears. For a vertex $v\in V$ that have an edge to both $s$ and $t$, then $w(v,st)=w(v,s)+w(v,t)$. Run the algorithm recursively on $G'$, and the min-cut of $G'$ is equal to that of $G$.
+        
+    \end{itemize}
+\begin{algorithm}[htb]
+    \caption{Stoer-Wagner Algorithm}
+    \begin{algorithmic}[1]
+        \Procedure{MinCutPhase}{$G=(V,E),a$}
+            \State $S \leftarrow \{a\}$
+            \While{$|S| < |V|$}
+                \State  $w(A,z)=\max\{w(A,y)\mid y\notin A\}$
+                \State where $w(A,y)$ is the sum of the weights of all the edges between A and y.
+                \State $S\leftarrow S\cup \{z\}$
+                \State shrink $G$ by merging the two vertices $(s, t)$ added last.
+            \EndWhile
+            \Return 
+        \EndProcedure
+        \leavevmode\newline
+        \Procedure{MinCut}{$G=(V,E),a$}
+            \While{$|V| > 1$}
+                \State $m\leftarrow MinCutPhase(G=(V,E),a)$
+                \If{$mincut > m$}
+                    \State $mincut \leftarrow m$
+                \EndIf
+            \EndWhile
+        \EndProcedure
+    \end{algorithmic}
+\end{algorithm}
 
 
 
@@ -124,12 +234,28 @@ Let $G(V,E)$ be a connected undirected graph with a weight $w(e)>0$ for each edg
 \end{displaymath}
 Give a polynomial algorithm to find $\beta^*(u,v)$ for each pair of vertices $u$ and $v$ in $V$ and a proof of the correctness of the algorithm.
 \end{exercise}
+\begin{proof} 
+    \leavevmode\newline
+    \begin{itemize}
+        \item
+        \item
+    \end{itemize}
+\end{proof}
 
 
 
 \begin{exercise}
 Let $G=(V,E)$ be a directed graph. Give a linear-time algorithm that given $G$, a node $s\in V$ and an integer $k$ decides whether there is a walk in $G$ starting at $s$ that visits at least $k$ distinct nodes.
 \end{exercise}
+\textbf{Solution:} 
+    \begin{itemize}
+        \item Use Tarjan Algorithm to get all \textbf{Strongly Connected Components (SCC)} of $G$. In A \textbf{SCC} there is a path that goes through each vertex in SCC for at least once.
+        \item Define $G'=(V', E')$ where each $v\in V'$ corresponds to an SCC of $G$, and for each edge $(u\rightarrow v) \in E'$, $w(u\rightarrow v)=|GCC(v)|$, where \textbf{GCC(v)} is the GCC in $G$ corresponding to $v$.
+        \item Suppose $s$ is in $GCC(s')$. We do a DFS starting at $s'$ in $G'$. We set $w\leftarrow 0$. When getting to a vertex $t'$, $w\leftarrow w+w(t')$. If $w>=k$, return $true$. If DFS is done, return $false$.
+        \item Time complexity is $O(|V|+|E|)$, which is linear to $V$ and $E$.
+    \end{itemize}
+
+
 
 
 
@@ -137,5 +263,37 @@ Let $G=(V,E)$ be a directed graph. Give a linear-time algorithm that given $G$, 
 \textbf{Minimum Bottleneck Spanning Tree}: Given a connected graph $ G $ with positive edge costs, find a
 spanning tree that {minimizes the most expensive edge}.
 \end{exercise}
+
+\textbf{Solution:}
+    \begin{itemize}
+        \item Suppose we need to find an \textbf{MBST} (Minimum Bottleneck Spanning Tree) in a undirected, connected, positive edge-weighted graph $G=(V,E)$. We have Camerini's Algorithm to find such a MBST in $O(n)$ time, which works as follows.
+        \item Find the \textbf{median} edge weight $w_m$ in $E$, then partition $E$ into $E_1=\{e\in E \mid w(e) > w_m\}$ and $E_2=\{e\in E \mid w(e) \leq w_m\}$.
+        \item Define $F$ to be the spanning tree forest of $E_2$. If $|F|=1$ then run the former step on $B$. 
+        \item Else, contract each connected component in $B$ to a single vertex. Create a new graph by using all vertexes from the contraction ($V'$), and all edges in $A$ that connects the connected components in $B$ ($E'$). We have $|V'|=|F|$, $G'=(V',E')$, MBST is $F \cup MBST(G')$.
+    \end{itemize}
+    \begin{algorithm}[htb]
+        \caption{Camerini's Algorithm}
+        \begin{algorithmic}[1]
+            \Procedure{MBST}{$G=(V,E)$}
+            \If{$|E|=1$}
+            \State
+            \Return $E$
+            \EndIf
+            \State
+            \State $E_1=\{e\in E \mid w(e) > w_m\}$, $E_2=\{e\in E \mid w(e) \leq w_m\}$, $A=(E_1, V_1)$, $B=(E_2, V_2)$
+            \State $|F| \leftarrow$ spanning tree (forest) of B
+            \State
+            \If $|F| = 1$
+                \State return MBST$(B)$
+            \Else
+                \State $V'\leftarrow$ contract each connected component in B into a single vertex
+                \State $E'\leftarrow$ edges in A that connect the connected components in B
+                \State
+                \Return $F \cup (V', E')$ 
+            \EndIf
+            \EndProcedure
+        \end{algorithmic}
+    \end{algorithm}
+
 
 \end{document}
